--- a/src/components/home/home.styles.css
+++ b/src/components/home/home.styles.css
@@ -10,6 +10,18 @@
     }
 }
 
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    50% {
+        transform: rotate(180deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 .home {
     background-color: #fff;
     border-radius: 20px 20px 0 0;
@@ -144,4 +156,22 @@ box-shadow: 0px -5px 19px -7px rgba(117,117,117,0.87);
     width: 30px;
     margin-left: 10px;
     animation: bounce 1s infinite;
+}
+
+.loading {
+    background-color: #fff;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loader {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border: 10px solid #7CADB6;
+    border-top: 10px solid #fff;
+    animation: spin 1s infinite;
 }
