--- a/src/components/home/home.styles.css
+++ b/src/components/home/home.styles.css
@@ -10,18 +10,6 @@
     }
 }
 
-@keyframes spin {
-    0% {
-        transform: rotate(0deg);
-    }
-    50% {
-        transform: rotate(180deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
-}
-
 .home {
     background-color: #fff;
     border-radius: 20px 20px 0 0;
@@ -31,11 +19,15 @@ box-shadow: 0px -5px 19px -7px rgba(117,117,117,0.87);
 }
 
 .home-container {
-    padding: 50px 0 50px 0;
+    padding: 50px 0 100px 0;
     display: flex;
     width: 80%;
     margin: 0 auto;
     justify-content: space-between;
+}
+
+.inverted {
+    flex-direction: row-reverse;
 }
 
 .home-container .home-left {
@@ -150,6 +142,7 @@ box-shadow: 0px -5px 19px -7px rgba(117,117,117,0.87);
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
+    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
 .exploreMore img {
