--- a/src/components/CTA/CTA.styles.css
+++ b/src/components/CTA/CTA.styles.css
@@ -10,6 +10,7 @@
     text-align: center;
     border-radius: 20px;
     background: linear-gradient(90deg, #add8df 0%, #7CADB6 100%);
+    z-index: 187687 !important;
 }
 
 .cta p {
