--- a/src/components/home/home.styles.css
+++ b/src/components/home/home.styles.css
@@ -16,6 +16,7 @@
     -webkit-box-shadow: 0px -5px 19px -7px rgba(117,117,117,0.87);
 -moz-box-shadow: 0px -5px 19px -7px rgba(117,117,117,0.87);
 box-shadow: 0px -5px 19px -7px rgba(117,117,117,0.87);
+z-index: -2;
 }
 
 .home-container {
