--- a/src/components/sign-in/sign-in.styles.css
+++ b/src/components/sign-in/sign-in.styles.css
@@ -1,3 +1,12 @@
+.limiter {
+  background-color: white;
+  border-radius: 20px 20px 0 0;
+    -webkit-box-shadow: 0px -5px 19px -7px rgba(117,117,117,0.87);
+-moz-box-shadow: 0px -5px 19px -7px rgba(117,117,117,0.87);
+box-shadow: 0px -5px 19px -7px rgba(117,117,117,0.87);
+z-index: -2;
+}
+
 .logo_container{
   padding-bottom: 40px;
 }
@@ -35,7 +44,7 @@ button:hover {
 
 .wrap-login100 {
   width: 960px;
-  background: rgba(255, 255, 255, 0.329);
+  background: #7cadb6b9;
   border-radius: 10px;
   overflow: hidden;
   display: flex;
