--- a/src/components/home/home.styles.css
+++ b/src/components/home/home.styles.css
@@ -187,6 +187,9 @@ z-index: -2;
 }
 
 @media (max-width: 500px) {
+    .home-container {
+        padding: 50px 0;   
+    }
     .home-container .home-left h1 {
         font-size: 30px;
     }
@@ -201,10 +204,11 @@ z-index: -2;
 
     .stats h2 {
         font-size: 20px;
+        letter-spacing: 3px;
     }
 
     .stats p {
-        font-size: 16px;
+        font-size: 14px;
     }
 
     .exploreMore button {
