--- a/src/components/home/home.styles.css
+++ b/src/components/home/home.styles.css
@@ -10,6 +10,15 @@
     }
 }
 
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 .home {
     background-color: #fff;
     border-radius: 20px 20px 0 0;
