--- a/src/components/sign-in/sign-in.styles.css
+++ b/src/components/sign-in/sign-in.styles.css
@@ -1,6 +1,6 @@
 .limiter {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   padding: 50px;
   align-items: center;
   background-color: white;
@@ -9,6 +9,10 @@
 -moz-box-shadow: 0px -5px 19px -7px rgba(117,117,117,0.87);
 box-shadow: 0px -5px 19px -7px rgba(117,117,117,0.87);
 z-index: -2;
+}
+
+.limiter div {
+  /* width: 100%; */
 }
 
 .logo_container{
@@ -43,7 +47,8 @@ button:hover {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding: 100px 130px 33px 95px;
+  margin: 20px;
+  padding: 100px 40px;
   box-shadow: 0px 0px 11px -1px rgba(0,0,0,0.44);
 -webkit-box-shadow: 0px 0px 11px -1px rgba(0,0,0,0.44);
 -moz-box-shadow: 0px 0px 11px -1px rgba(0,0,0,0.44);
@@ -51,13 +56,11 @@ button:hover {
 
 
 .login100-form-title {
-  font-family: Poppins-Bold;
   font-size: 24px;
   color: #ffffff;
   line-height: 1.2;
   text-align: center;
-
-  width: 100%;
+  width: fit-content;
   display: block;
   padding-bottom: 54px;
 }
@@ -75,7 +78,6 @@ button:hover {
   font-size: 15px;
   line-height: 1.5;
   color: #666666;
-
   display: block;
   width: 100%;
   background: #e6e6e6;
@@ -93,12 +95,10 @@ button:hover {
 }
 
 .login100-form-btn {
-  font-family: Montserrat-Bold;
   font-size: 15px;
   line-height: 1.5;
   color: #fff;
   text-transform: uppercase;
-
   width: 100%;
   height: 50px;
   border-radius: 25px;
@@ -107,7 +107,6 @@ button:hover {
   justify-content: center;
   align-items: center;
   padding: 0 25px;
-
   transition: all 0.4s;
 }
 
@@ -152,15 +151,16 @@ button:hover {
   .wrap-login100 {
     width: 90vw;
   }
+
+  .input100 {
+    padding: 0 10px 0 20px;
+  }
 }
 
 @media (max-width: 377px){
   .wrap-login100 {
-    width: 100vw;
-    height: 500px;
+    /* width: 100vw; */
+    /* height: 500px; */
     align-items: center;
-  }
-  .login100-pic {
-    display: none;
   }
 }
