--- a/src/components/sign-in/sign-in.styles.css
+++ b/src/components/sign-in/sign-in.styles.css
@@ -3,12 +3,12 @@
   justify-content: center;
   padding: 50px;
   align-items: center;
-  background-color: white;
   border-radius: 20px 20px 0 0;
-    -webkit-box-shadow: 0px -5px 19px -7px rgba(117,117,117,0.87);
--moz-box-shadow: 0px -5px 19px -7px rgba(117,117,117,0.87);
-box-shadow: 0px -5px 19px -7px rgba(117,117,117,0.87);
-z-index: -2;
+  -webkit-box-shadow: 0px -5px 19px -7px rgba(117,117,117,0.87);
+  -moz-box-shadow: 0px -5px 19px -7px rgba(117,117,117,0.87);
+  box-shadow: 0px -5px 19px -7px rgba(117,117,117,0.87);
+  z-index: -2;
+  background-color: white;
 }
 
 .limiter div {
@@ -114,7 +114,15 @@ button:hover {
   background: #333333;
 }
 
-
+.switch p {
+  font-size: 15px;
+  line-height: 1.5;
+  color: #666666;
+  display: block;
+  width: 100%;
+  text-align: center;
+  padding-top: 20px;
+}
 
 /*------------------------------------------------------------------
 [ Responsive ]*/
