--- a/src/components/sign-in/sign-in.styles.css
+++ b/src/components/sign-in/sign-in.styles.css
@@ -9,6 +9,7 @@
   box-shadow: 0px -5px 19px -7px rgba(117,117,117,0.87);
   z-index: -2;
   background-color: white;
+  height: 100vh;
 }
 
 .limiter div {
