--- a/src/components/search-candidate/search-candidate.styles.css
+++ b/src/components/search-candidate/search-candidate.styles.css
@@ -25,11 +25,12 @@
   }
 
 .card-list {
-    width: 85vw;
+    max-width: 85vw;
     margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 20px;
+    
   }
   
   .card-container {
