--- a/src/components/card/card.styles.css
+++ b/src/components/card/card.styles.css
@@ -1,4 +1,10 @@
+.card-container {
+
+    /* color: #E1ECC8; */
+}
+
 .card-container p {
+    margin-top: 10px;
     display: flex;
     align-items: center;
 }
