--- a/src/components/search-candidate/search-candidate.styles.css
+++ b/src/components/search-candidate/search-candidate.styles.css
@@ -16,7 +16,7 @@
     width: 40vw;
     line-height: 30px;
     margin-bottom: 30px;
-    background-color: #7CADB6;
+    background-color: #E3F4F4;
     border-radius: 20px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
   }
@@ -36,7 +36,7 @@
   }
 
   .search-input::placeholder {
-    color: #ffffff;
+    color: #000;
   }
 
 .card-list {
@@ -51,7 +51,7 @@
   .card-container {
     display: flex;
     flex-direction: column;
-    background-color: #E1ECC8;
+    background-color: #E3F4F4;
     border-radius: 5px;
     padding: 25px;
     cursor: pointer;
