--- a/src/components/search-candidate/search-candidate.styles.css
+++ b/src/components/search-candidate/search-candidate.styles.css
@@ -28,7 +28,7 @@
     width: 100%;
     background-color: transparent;
     font-size: 1em;
-    color: #ffffff;
+    color: #000;
   }
 
   .search-box img {
