--- a/src/components/sign-in/sign-in.styles.css
+++ b/src/components/sign-in/sign-in.styles.css
@@ -102,6 +102,7 @@ button:hover {
   text-transform: uppercase;
   width: 100%;
   height: 50px;
+  margin: 10px 0;
   border-radius: 25px;
   background: #3182b4;
   display: flex;
@@ -171,5 +172,9 @@ button:hover {
     /* width: 100vw; */
     /* height: 500px; */
     align-items: center;
+  }
+
+  .login100-form-btn {
+    font-size: 12px;
   }
 }
